# Loan-prediction-approval

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MLproject  README.md  config.py  data_exploration.ipynb  docker-compose.yml  mlflow.db.bak  pyproject.toml  python_env.yaml  requirements.txt  secret.example.yaml
.claude/: settings.json
.github/workflows/: cd.yml  ci.yaml  ci.yml  drift_check.yml  retrain.yml
artifacts/: encoder.joblib  preprocessor.joblib
deployment/: argocd-app.yaml  deployment.yaml  grafana.yaml  ingress.yaml  prometheus.yaml  service.yaml
k8s/: argocd-app.yaml  deployment.yaml  gitops-sync.yaml  grafana.yaml  ingress.yaml  mlflow.yaml  namespace.yaml  prometheus.yaml  pvc.yaml  secret.yaml  service.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: loan_api.json
monitoring/grafana/provisioning/alerting/: contact_points.yaml  rules.yaml
monitoring/grafana/provisioning/dashboards/: dashboard.yml
notebooks/: data_exploration.ipynb
src/: config.py  drift_analysis.py  main.py  predict.py  run.sh
src/api/: app.py  logger.py  metrics.py  schemas.py
src/api/static/: index.html  metrics.html
src/data_processing/: data_load.py  preprocessing.py
src/model/: evaluate.py  registry.py  search_space.py  train.py  tune.py
unit_tests/: test_api.py  test_integration.py  test_preprocessing.py
