[project]
name = "loan-prediction-approval"
version = "0.1.0"
description = "Project part of reproductibility ENSAE class"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.1.0",
    "catboost>=1.2.10",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "flake8>=7.3.0",
    "hyperopt>=0.2.7",
    "ipykernel>=7.2.0",
    "isort>=8.0.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=2.10",
    "numpy>=2.4.2",
    "pandas<3",
    "pre-commit>=4.5.1",
    "protobuf<4.0.0",
    "pytest>=9.0.2",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools<70",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "ruff>=0.15.4",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]




[tool.flake8]
max-line-length = 100
